--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Profile</title>
     <meta charset="description"  content="テキストテキストテキストテキストテキストテキストテキストテキスト">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="shortcut icon" href="https://github.com/suzusato/suzusato/blob/main/favicon.ico">
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">   
     
@@ -13,7 +13,7 @@
 
   <body>
     <header id="header" class="wrapper">
-      <h1 class="site-title"><a href="index.html"><img src="img/logo.svg"></a></h1>
+      <h1 class="site-title"><a href="index.html"><img src="https://github.com/suzusato/suzusato/blob/main/logo.svg"></a></h1>
       <nav>
         <ul>
           <li><a href="#About">About</a></li>
